--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 editables/
 job descriptions/
+img/sap-2015.jfif
+img/sap-2016-full.jpg
+img/sap-2017-full.jfif
+img/sap-2018-full.jfif
+img/sap-2014-full.jpg
